# rules_uv

./: .gitignore  CHANGELOG.md  README.md
docs/: BUILD.bazel  ROADMAP.md  pip_extensions.md  uv_defs.md  uv_toolchains.md
examples/multiplatform/: BUILD.bazel  multiplatform_test.py
examples/smoke/: BUILD.bazel  smoke_test.py
pip/: BUILD.bazel  extensions.bzl
pip/private/: BUILD.bazel  markers.bzl  pip_package.BUILD.tpl  platform.bzl  sdist_install.bzl  uvlock_to_json.py  wheel_selection.bzl
uv/: BUILD.bazel  defs.bzl  extensions.bzl  toolchains.bzl
uv/private/: BUILD.bazel  known_versions.bzl  uv_run.sh  uv_source.BUILD.bazel
