load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

package(default_visibility = ["//visibility:public"])

bzl_library(
    name = "extensions",
    srcs = ["extensions.bzl"],
    deps = [
        "//pip/private:platform",
        "//pip/private:sdist_install",
        "//pip/private:wheel_selection",
    ],
)
